# pairs_mins_core

./: .gitignore  .gitman.yml  README.md
ros_packages/pairs_mins_core/: CMakeLists.txt  package.xml
ros_packages/pairs_mins_core/config/realworld/bluefox_front/: config_camera.yaml  config_system.yaml
ros_packages/pairs_mins_core/config/realworld/bluefox_front_outdoor/: config_estimator.yaml  config_imu.yaml  config_init.yaml  config_lidar.yaml
ros_packages/pairs_mins_core/config/realworld/oak_front/: config_camera.yaml  config_imu.yaml  config_lidar.yaml  oak_mins.yaml
ros_packages/pairs_mins_core/config/realworld/pico_t265/: config_camera.yaml  config_estimator.yaml  config_imu.yaml  config_system.yaml  pcl_depth_filter_config.yaml  point_cloud_manager.yaml
ros_packages/pairs_mins_core/config/rosbag/bluefox_front/: config_camera.yaml
ros_packages/pairs_mins_core/config/rosbag/pico_t265/: config_camera.yaml  config_estimator.yaml  config_imu.yaml  config_lidar.yaml  pcl_depth_filter_config.yaml  pico_merger.yaml
ros_packages/pairs_mins_core/config/simulation/bluefox/: config_camera.yaml  config_imu.yaml  (+2 more)
ros_packages/pairs_mins_core/launch/: filter_t265.launch  oak.launch  oak_tfs.launch  pico_t265.launch  point_cloud_manager.launch  realworld_bluefox_front.launch  realworld_bluefox_front_outdoor.launch  realworld_oak_front.launch  rosbag_bluefox_front.launch  rosbag_core.launch  rosbag_estimation_manager.launch  rosbag_pico_t265.launch  rviz.launch  simulation_bluefox.launch
ros_packages/pairs_mins_core/rviz/: default.rviz
ros_packages/pairs_mins_core/scripts/: refactor_rviz_config.sh
ros_packages/pairs_mins_core/tmux/realworld/: mins.rviz
ros_packages/pairs_mins_core/tmux/simulation/: session.yml  simulation.sh
(+27 files in other folders)
