<?xml version="1.0"?>
<package format="2">

  <name>pairs_mins_core</name>
  <version>1.0.0</version>
  <description>The PAIRS mins core metapackage</description>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>
  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>mins</depend>
  <depend>pairs_mins_estimator_plugin</depend>
  <depend>pairs_vins_republisher</depend>
  <depend>pairs_vins_imu_filter</depend>
  <depend>imu_transformer</depend>

</package>
